--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div id="search" class="container-fuild">
+<!-- <div id="search" class="container-fuild">
   <div class="form-group container">
     <div class="input-group">
       <a (click)="searching(search.value)" ><i id="icon-search" class="fas fa-search input-group-addon"></i></a>
@@ -6,30 +6,148 @@
        type="search" class="form-control input-group-text" placeholder="search" #search>
    </div>
   </div>
-</div>
+</div> -->
 
 <div id="content" class="container-fuild row">
 
+
+    <div id='form' class="col-10 col-lg-10 col-md-10 col-sm-10 col-xs-10">
+        <div class="alert alert-success alert-dismissible" *ngIf="message">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{message.msg}}
+        </div>
+        <form [formGroup]='fGroup' id="processForm">
+          <div class="form-group">
+            <label for="date">Date:</label>
+            <input type="date" 
+            formControlName="date"
+            class="form-control" id="date" #date>
+          </div>
+  
+  
+          <div class="form-group">
+            <div class="row">
+              <div class='col-sm-3 col-xs-3 col-3'>
+                  <label for="conv">conver:</label>
+                  <input type="text" 
+                  formControlName="conversations"
+                  class="form-control" id="conv" #conv>
+              </div>
+              <div class='col-sm-3 col-xs-3 col-3' id="div-dtm">
+                  <label for="dtm">DTM:</label>
+                  <input type="text" 
+                  formControlName="dtm"
+                  class="form-control" id="dtm" #dtm>
+              </div>
+              <div class='col-sm-3 col-xs-3 col-3' id="div-mg1">
+                  <label for="mg1">MG1:</label>
+                  <input type="text" 
+                  formControlName="mg1"
+                  class="form-control" id="mg1" #mg1>
+              </div>
+              <div class='col-sm-3 col-xs-3 col-3' id="div-mg2">
+                  <label for="mg2">MG2:</label>
+                  <input type="text" 
+                  formControlName="mg2"
+                  class="form-control" id="mg2" #mg2>
+              </div>
+              <div class='col-sm-3 col-xs-3 col-3' id="div-mg3">
+                  <label for="mg3">MG3:</label>
+                  <input type="text" 
+                  formControlName="mg3"
+                  class="form-control" id="mg3" #mg3>
+              </div>
+              <div class='col-sm-3 col-xs-3 col-3' id="div-bp1">
+                  <label for="bp1">BP1:</label>
+                  <input type="text" 
+                  formControlName="bp1"
+                  class="form-control" id="bp1" #bp1>
+              </div>
+              <div class='col-sm-3 col-xs-3 col-3' id="div-bp2">
+                  <label for="bp2">BP2:</label>
+                  <input type="text" 
+                  formControlName="bp2"
+                  class="form-control" id="bp2" #bp2>
+              </div>
+              <div class='col-sm-3 col-xs-3 col-3' id="div-fp1">
+                  <label for="fp1">FP1:</label>
+                  <input type="text" 
+                  formControlName="fp1"
+                  class="form-control" id="fp1" #fp1>
+              </div>
+              <div class='col-sm-3 col-xs-3 col-3' id="div-fp2">
+                  <label for="fp2">FP2:</label>
+                  <input type="text" 
+                  formControlName="fp2"
+                  class="form-control" id="fp2" #fp2>
+              </div>
+              <div class='col-sm-3 col-xs-3 col-3' id="div-pre">
+                  <label for="prel">PreL:</label>
+                  <input type="text" 
+                  formControlName="preLaunch"
+                  class="form-control" id="prel" #preLaunch>
+              </div>
+              <div class='col-sm-3 col-xs-3 col-3' id="div-launch">
+                  <label for="launch">Launch:</label>
+                  <input type="text" 
+                  formControlName="launch"
+                  class="form-control" id="launch" #launch>
+              </div>
+              <div class='col-sm-3 col-xs-3 col-3' id="div-others">
+                  <label for="others">others:</label>
+                  <input type="text" 
+                  formControlName="others"
+                  class="form-control" id="others" #others>
+              </div>
+            </div>
+            
+          </div>
+  
+  
+          <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" (click)= "numOfappointments(date.value, conv.value, dtm.value, mg1.value, mg2.value, mg3.value, bp1.value, bp2.value, fp1.value, fp2.value, preLaunch.value, launch.value, others.value)" >Submit</button>
+        </form>
+  
+    </div>
+
   <div #graph id="graph" class="col-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 canvas">
-      <div class="form-group" class="filter" [formGroup]='fGroup'>
+      <div class="form-group" [formGroup]='fGroup'>
           <label for="category" class="label">Filter:</label>
           <select
           id="filter"
           name="fliter"
           formControlName="filter"
-          [(ngModel)]="filter.value"
           class="form-control input-group-text" #filter (change)="updateTable(filter.value)">
-            <option value="10" selected aria-selected="true">10</option>
-            <option value="20">20</option>
-            <option value="20">30</option>
+            <option value="5" selected aria-selected="true">5</option>
+            <option value="date">Date Range</option>
+            <option value="30">30</option>
           </select>
        </div>
 
+       <div class="form-group row date-range" *ngIf="filter.value == 'date'">
+          <div class='col-lg-3 col-md-3 col-xs-6 col-6' >
+              <label for="fromDate">FromDate:</label>
+              <input type="date" id="fromDate"
+              class="form-control" id="others" #fromDate>
+          </div> 
+          <div class='col-lg-3 col-md-3 col-xs-6 col-6' >
+              <label for="toDate">ToDate:</label>
+              <input type="date" id="toDate"
+              class="form-control" id="others" #toDate>
+          </div>
+          <div class="col-12 col-lg-3 col-md-3">
+              <input class="btn btn-success btn-md form-control" type="button" (click)="dateFilter(fromDate.value, toDate.value)" value="Search">
+          </div>
+          
+       </div>
+       
+       
 
-       <table class="table table-dark table-bordered table-hover table-responsive">
+
+       <table class="text-nowrap table table-dark table-bordered table-hover table-responsive">
         <thead>
           <tr>
-            <th>conver</th>
+            <th>Date</th>
+            <th>CNV</th>
             <th>DTM</th>
             <th>MG1</th>
             <th>MG2</th>
@@ -39,13 +157,13 @@
             <th>FP1</th>
             <th>FP2</th>
             <th>PreL</th>
-            <th>Launch</th>
-            <th>Others</th>
-            <th>Date</th>
+            <th>LCH</th>
+            <th>MSC</th>
           </tr>
         </thead>
         <tbody>
           <tr *ngFor = "let list of tableList">
+            <td>{{list.todayDate | removeYear}}</td>
             <td>{{list.conversations}}</td>
             <td>{{list.dtm}}</td>
             <td>{{list.mg1}}</td>
@@ -58,110 +176,28 @@
             <td>{{list.preLaunch}}</td>
             <td>{{list.launch}}</td>
             <td>{{list.others}}</td>
-            <td>{{list.todayDate}}</td>
+          </tr>
+          <tr>
+            <td>Total:</td>
+            <td>{{map.get('conv-aggregate')}}</td>
+            <td>{{map.get('dtm-aggregate')}}</td>
+            <td>{{map.get('mg1-aggregate')}}</td>
+            <td>{{map.get('mg2-aggregate')}}</td>
+            <td>{{map.get('mg3-aggregate')}}</td>
+            <td>{{map.get('bp1-aggregate')}}</td>
+            <td>{{map.get('bp2-aggregate')}}</td>
+            <td>{{map.get('fp1-aggregate')}}</td>
+            <td>{{map.get('fp2-aggregate')}}</td>
+            <td>{{map.get('preLaunch-aggregate')}}</td>
+            <td>{{map.get('launch-aggregate')}}</td>
+            <td></td>
           </tr>
         </tbody>
       </table>
       <!-- <svg width="100%" height="500px"></svg> -->
   </div>
 
-  <div id='form' class="col-10 col-lg-10 col-md-10 col-sm-10 col-xs-10">
-      <div class="alert alert-success alert-dismissible" *ngIf="message">
-          <button type="button" class="close" data-dismiss="alert">&times;</button>
-          {{message.msg}}
-      </div>
-      <form [formGroup]='fGroup' id="processForm">
-        <div class="form-group">
-          <label for="date">Date:</label>
-          <input type="date" 
-          formControlName="date"
-          class="form-control" id="date" #date>
-        </div>
-
-
-        <div class="form-group">
-          <div class="row">
-            <div class='col-sm-3 col-xs-3 col-3'>
-                <label for="conv">conver:</label>
-                <input type="text" 
-                formControlName="conversations"
-                class="form-control" id="conv" #conv>
-            </div>
-            <div class='col-sm-3 col-xs-3 col-3' id="div-dtm">
-                <label for="dtm">DTM:</label>
-                <input type="text" 
-                formControlName="dtm"
-                class="form-control" id="dtm" #dtm>
-            </div>
-            <div class='col-sm-3 col-xs-3 col-3' id="div-mg1">
-                <label for="mg1">MG1:</label>
-                <input type="text" 
-                formControlName="mg1"
-                class="form-control" id="mg1" #mg1>
-            </div>
-            <div class='col-sm-3 col-xs-3 col-3' id="div-mg2">
-                <label for="mg2">MG2:</label>
-                <input type="text" 
-                formControlName="mg2"
-                class="form-control" id="mg2" #mg2>
-            </div>
-            <div class='col-sm-3 col-xs-3 col-3' id="div-mg3">
-                <label for="mg3">MG3:</label>
-                <input type="text" 
-                formControlName="mg3"
-                class="form-control" id="mg3" #mg3>
-            </div>
-            <div class='col-sm-3 col-xs-3 col-3' id="div-bp1">
-                <label for="bp1">BP1:</label>
-                <input type="text" 
-                formControlName="bp1"
-                class="form-control" id="bp1" #bp1>
-            </div>
-            <div class='col-sm-3 col-xs-3 col-3' id="div-bp2">
-                <label for="bp2">BP2:</label>
-                <input type="text" 
-                formControlName="bp2"
-                class="form-control" id="bp2" #bp2>
-            </div>
-            <div class='col-sm-3 col-xs-3 col-3' id="div-fp1">
-                <label for="fp1">FP1:</label>
-                <input type="text" 
-                formControlName="fp1"
-                class="form-control" id="fp1" #fp1>
-            </div>
-            <div class='col-sm-3 col-xs-3 col-3' id="div-fp2">
-                <label for="fp2">FP2:</label>
-                <input type="text" 
-                formControlName="fp2"
-                class="form-control" id="fp2" #fp2>
-            </div>
-            <div class='col-sm-3 col-xs-3 col-3' id="div-pre">
-                <label for="prel">PreL:</label>
-                <input type="text" 
-                formControlName="preLaunch"
-                class="form-control" id="prel" #preLaunch>
-            </div>
-            <div class='col-sm-3 col-xs-3 col-3' id="div-launch">
-                <label for="launch">Launch:</label>
-                <input type="text" 
-                formControlName="launch"
-                class="form-control" id="launch" #launch>
-            </div>
-            <div class='col-sm-3 col-xs-3 col-3' id="div-others">
-                <label for="others">others:</label>
-                <input type="text" 
-                formControlName="others"
-                class="form-control" id="others" #others>
-            </div>
-          </div>
-          
-        </div>
-
-
-        <button type="submit" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" (click)= "numOfappointments(date.value, conv.value, dtm.value, mg1.value, mg2.value, mg3.value, bp1.value, bp2.value, fp1.value, fp2.value, preLaunch.value, launch.value, others.value)" >Submit</button>
-      </form>
-
-  </div>
+  
 
   <div class=" col-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <pagination [items]="promotedTalkes" [size]="length" [isDashboard]="true" *ngIf="refresh"></pagination>
