--- a/src/app/shared-talks/shared-talks.component.less
+++ b/src/app/shared-talks/shared-talks.component.less
@@ -11,5 +11,18 @@
         transition: width 0.1s ease;
 }
 
+div#search{
+    margin-top: 20px;
+}
+
+i#icon-search{
+    position: relative;
+    padding: 11px;
+    left: 4px;
+    background-color:rgb(9, 90, 240);
+    color: black;
+    border-radius: 5px 5px;
+    
+}
 
 
