--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,107 +5,119 @@
             <h2>Edit Profile</h2>
         </div>
         <div class="col-lg-8">
-            <div class="alert alert-info alert-dismissable"> <a class="panel-close close" data-dismiss="alert">×</a>
-                This is an <strong>.alert</strong>. Use this to show important messages to the user.
+            <div *ngIf="isProfileSaved" class="alert alert-info alert-dismissable"> <a class="panel-close close" data-dismiss="alert">×</a>
+                User Profile Saved. 
             </div>
         </div>
-        <div class="col-lg-8 push-lg-4 personal-info">
+        <div class="col-lg-8 col-7 col-md-7 col-sm-7 push-lg-4 personal-info">
              <form role="form" [formGroup]="profileGroup">
                 <div class="form-group row">
                     <label class="col-lg-3 col-form-label form-control-label">First name</label>
                     <div class="col-lg-9">
-                        <input class="form-control" type="text" value="Jane" />
+                        <input
+                         formControlName="first_name"
+                         class="form-control" type="text" value="" #fname/>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-lg-3 col-form-label form-control-label">Last name</label>
                     <div class="col-lg-9">
-                        <input class="form-control" type="text" value="Bishop" />
+                        <input
+                         formControlName="last_name"
+                         class="form-control" type="text" value="" #lname />
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-lg-3 col-form-label form-control-label">Email</label>
                     <div class="col-lg-9">
-                        <input class="form-control" type="email" value="email@gmail.com" />
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-3 col-form-label form-control-label">Company</label>
-                    <div class="col-lg-9">
-                        <input class="form-control" type="text" value="" />
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-3 col-form-label form-control-label">Website</label>
-                    <div class="col-lg-9">
-                        <input class="form-control" type="url" value="" />
+                        <input
+                         formControlName="email"
+                         class="form-control" type="email" value=""  #email/>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-lg-3 col-form-label form-control-label">Address</label>
                     <div class="col-lg-9">
-                        <input class="form-control" type="text" value="" placeholder="Street" />
+                        <input
+                         formControlName="address"
+                         class="form-control" type="text" value="" placeholder="Street" #address />
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-lg-3 col-form-label form-control-label"></label>
                     <div class="col-lg-6">
-                        <input class="form-control" type="text" value="" placeholder="City" />
+                        <input
+                         formControlName="city"
+                         class="form-control" type="text" value="" placeholder="City"  #city/>
                     </div>
                     <div class="col-lg-3">
-                        <input class="form-control" type="text" value="" placeholder="State" />
+                        <input
+                         formControlName="state"
+                         class="form-control" type="text" value="" placeholder="State"  #state/>
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-lg-3 col-form-label form-control-label">Time Zone</label>
+                    <label class="col-lg-3 col-form-label form-control-label">Role</label>
                     <div class="col-lg-9">
-                        <select id="user_time_zone" class="form-control" size="0">
-                            <option value="Hawaii">(GMT-10:00) Hawaii</option>
-                            <option value="Alaska">(GMT-09:00) Alaska</option>
-                            <option value="Pacific Time (US &amp; Canada)">(GMT-08:00) Pacific Time (US &amp; Canada)</option>
-                            <option value="Arizona">(GMT-07:00) Arizona</option>
-                            <option value="Mountain Time (US &amp; Canada)">(GMT-07:00) Mountain Time (US &amp; Canada)</option>
-                            <option value="Central Time (US &amp; Canada)"
-                            selected="selected">(GMT-06:00) Central Time (US &amp; Canada)</option>
-                            <option value="Eastern Time (US &amp; Canada)">(GMT-05:00) Eastern Time (US &amp; Canada)</option>
-                            <option value="Indiana (East)">(GMT-05:00) Indiana (East)</option>
+                        <select
+                        id="role"
+                        name="role"
+                        formControlName="role"
+                        class="form-control input-group-text" #role>
+                            <option value="default" selected aria-selected="true">----Select your Pin----</option>
+                            <option value="ibo">IBO</option>
+                            <option value="silver">Silver</option>
+                            <option value="Eagle">Eagle</option>
+                            <option value="platinum">Platinum</option>
+                            <option value="ruby">Ruby</option>
+                            <option value="emerald">Emerald</option>
+                            <option value="diamond">Diamond</option>
+                            <option value="edc">EDC</option>
+                            <option value="crown">Crown</option>
                         </select>
-                    </div>
-                </div>
-                <div class="form-group row">
-                    <label class="col-lg-3 col-form-label form-control-label">Username</label>
-                    <div class="col-lg-9">
-                        <input class="form-control" type="text" value="janeuser" />
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-lg-3 col-form-label form-control-label">Password</label>
                     <div class="col-lg-9">
-                        <input class="form-control" type="password" value="11111122333" />
+                        <input
+                        formControlName="password"
+                        class="form-control" type="password" value="" #pwd/>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-lg-3 col-form-label form-control-label">Confirm password</label>
                     <div class="col-lg-9">
-                        <input class="form-control" type="password" value="11111122333" />
+                        <input
+                        formControlName="cmp_password"
+                        class="form-control" type="password" value=""  #cnf_pwd/>
                     </div>
                 </div>
                 <div class="form-group row">
                     <label class="col-lg-3 col-form-label form-control-label"></label>
-                    <div class="col-lg-9">
+                    <div class="col-lg-9 col-9 col-md-9 col-sm-9">
                         <input type="reset" class="btn btn-secondary" value="Cancel" />
-                        <input type="button" class="btn btn-primary" value="Save Changes" />
+                        <input type="button" class="btn btn-primary" value="Save Changes" [disabled]='profileGroup.invalid'
+                        (click)="updateUserProfile(fname.value, lname.value, email.value, address.value, city.value, state.value, role.value, pwd.value)" />
                     </div>
                 </div>
             </form>
         </div>
-        <div class="col-lg-4 pull-lg-8 text-xs-center">
-                <img src="//placehold.it/150" class="m-x-auto img-fluid img-circle" alt="avatar" />
-                <h6 class="m-t-2">Upload a different photo</h6>
-                <label class="custom-file">
-                  <input type="file" id="file" class="custom-file-input">
-                  <span class="custom-file-control">Choose file</span>
-                </label>
+        <div class="form-group col-lg-4 col-5 col-md-5 col-sm-5">
+            <div class="row">
+                <div class="col-12 profile-pic">
+                        <img [src]="imageSrc" style="width: 100px; height: 100px; background-color: white;"> 
+                </div>
+                
+                <div class="custom-file col-10">
+                    <input 
+                    id="customFile"
+                    type="file"
+                    name="file"
+                    class="custom-file-input form-control-file" placeholder="choose a file" #file (change)="image($event)">
+                    <label class="custom-file-label" for="customFile">{{fileName}}</label>
+                </div> 
+            </div> 
         </div>
     </div>
 </div>
