--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -14,7 +14,7 @@
     <div id='form' class="col-10 col-lg-10 col-md-10 col-sm-10 col-xs-10">
         <div class="alert alert-success alert-dismissible" *ngIf="message">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
-            {{message.msg}}
+            {{message}}
         </div>
         <form [formGroup]='fGroup' id="processForm">
           <div class="form-group">
