--- a/src/app/dashboard/dashboard.component.less
+++ b/src/app/dashboard/dashboard.component.less
@@ -84,8 +84,18 @@ input[type="button"]{
 
 .table{
   margin-left: 50px;
-  overflow-y: scroll;
+  
   height: 345px;
+}
+
+thead th{
+  position: sticky;
+  top: 0px;
+  background-color: black;
+}
+
+tbody{
+  overflow-y: scroll;
 }
 
 
