--- a/src/app/shared-talks/shared-talks.component.less
+++ b/src/app/shared-talks/shared-talks.component.less
@@ -3,9 +3,6 @@
     margin: 20px;
 }
 
-#upload{
-    margin-top: 20px; 
-}
 
 .progress > .progress-bar::-webkit-progress-value{
         transition: width 0.1s ease;
@@ -13,6 +10,7 @@
 
 div#search{
     margin-top: 20px;
+    margin-bottom: -50px;
 }
 
 i#icon-search{
@@ -24,5 +22,7 @@ i#icon-search{
     border-radius: 5px 5px;
     
 }
+
+
 
 
