--- a/src/styles.less
+++ b/src/styles.less
@@ -1,23 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
 
 
-nav::after{
+// nav::after{
 
-    content: "BETA";
-    position: fixed;
-    width: 80px;
-    height: 25px;
-    background: rgb(250, 184, 4);
-    top: 7px;
-    left: -20px;
-    text-align: center;
-    font-size: 13px;
-    font-family: sans-serif;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: rgb(243, 41, 6);
-    line-height: 27px;
-    -ms-transform:rotate(-45deg);
-    -webkit-transform:rotate(-45deg);
-    transform:rotate(-45deg);
-}
+//     content: "BETA";
+//     position: fixed;
+//     width: 80px;
+//     height: 25px;
+//     background: rgb(250, 184, 4);
+//     top: 7px;
+//     left: -20px;
+//     text-align: center;
+//     font-size: 13px;
+//     font-family: sans-serif;
+//     text-transform: uppercase;
+//     font-weight: bold;
+//     color: rgb(243, 41, 6);
+//     line-height: 27px;
+//     -ms-transform:rotate(-45deg);
+//     -webkit-transform:rotate(-45deg);
+//     transform:rotate(-45deg);
+// }
