--- a/src/app/profile/profile.component.less
+++ b/src/app/profile/profile.component.less
@@ -7,6 +7,10 @@ input[type="reset"]{
     margin-right: 5px;
 }
 
+.container{
+    margin-top: 80px;
+}
+
 @media only screen and (max-width:750px){
     input[type="reset"]{
         margin-bottom: 10px;
