--- a/src/app/shared-talks/shared-talks.component.less
+++ b/src/app/shared-talks/shared-talks.component.less
@@ -13,6 +13,10 @@ div#search{
     margin-bottom: -50px;
 }
 
+.container{
+    margin-top: 80px;
+}
+
 i#icon-search{
     position: relative;
     padding: 11px;
