--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
 
-<nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top sticky-top">
-    <span id="main-menu" [class]="isLoggedIn ? 'menu-position' : '' " style="color: white;"> Menu <i id="menu-icon" class= "fas fa-bars"></i></span>
-    <a class="navbar-brand" routerLink="/profile" *ngIf="isLoggedIn"><img src="{{src}}" class=" img-fluid rounded-circle" id="nav-profile"> Welcome {{name}}</a>
+<nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top sticky-top" *ngIf="isLoggedIn">
+    <!-- <span id="main-menu" [class]="isLoggedIn ? 'menu-position' : '' " style="color: white;"> Menu <i id="menu-icon" class= "fas fa-bars"></i></span> -->
+    <a class="navbar-brand" routerLink="/profile"><img src="{{src}}" class=" img-fluid rounded-circle" id="nav-profile"> Welcome {{name}}</a>
     
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" id="toggle">
       <span class="navbar-toggler-icon"></span>
@@ -11,16 +11,16 @@
     <div class="collapse navbar-collapse right" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a *ngIf="isLoggedIn" id="modal" class="nav-link" routerLink=""><i class="fas fa-bell"></i><i class="fas fa-circle dot"></i></a>
+          <a  id="modal" class="nav-link" routerLink=""><i class="fas fa-bell"></i><i class="fas fa-circle dot"></i></a>
         </li>
         <li class="nav-item">
-          <a *ngIf="isLoggedIn" class="nav-link" routerLink=""><i class="fas fa-tasks"></i><span></span></a>
+          <a  class="nav-link" routerLink=""><i class="fas fa-tasks"></i><span></span></a>
         </li>
         <li class="nav-item">
-          <a *ngIf="isLoggedIn" class="nav-link" routerLink=""><i class="fas fa-tools"></i><span></span></a>
+          <a  class="nav-link" routerLink=""><i class="fas fa-tools"></i><span></span></a>
         </li> 
         <li class="nav-item">
-          <a *ngIf="isLoggedIn" class="nav-link" (click)="logout()" routerLink="/"><i class="fas fa-sign-out-alt"></i><span></span></a>
+          <a  class="nav-link" (click)="logout()" routerLink="/"><i class="fas fa-sign-out-alt"></i><span></span></a>
         </li>    
       </ul>
     </div> 
@@ -90,12 +90,12 @@
 <div class="container-fluid" id="side-nav">
     <!-- col-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 -->
     <div class="row">
-        <nav class="nav-color navbar" id="nav-menu">
+        <nav class="nav-color navbar" id="nav-menu" *ngIf="isLoggedIn">
                 <ul class="nav nav-pills row" id="loop">
-                    <li id="exclude" class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" *ngIf="isLoggedIn">
+                    <!-- <li id="exclude" class="" *ngIf="isLoggedIn">
                         <a class=" nav-link "  routerLink="profile"><img src="{{src}}" class=" img-fluid rounded-circle" id="sidenav-img"></a>
-                    </li>
-                    <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" id="dashboard">
+                    </li> -->
+                    <li class="" id="dashboard">
                         <a class=" nav-link " routerLink="dashboard"><i class="fas fa-tachometer-alt"></i><span> DashBoard</span></a>
                     </li>
                     <!-- <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
@@ -107,13 +107,13 @@
                     <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                       <a class=" nav-link " routerLink=""><i class="fas fa-chart-area"></i><span> Progress</span></a>
                     </li> -->
-                    <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" id="training">
+                    <li class="" id="training">
                       <a class=" nav-link " routerLink="sharedTalks"><i class="fas fa-file-audio"></i><span> Training</span></a>
                     </li>
-                    <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" id="profile">
+                    <li class="" id="profile">
                       <a class=" nav-link " routerLink="profile"><i class="fas fa-user"></i><span> Profile</span></a>
                     </li>
-                    <li class=" col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" id="profile" *ngIf = "isAdmin == 'true' && isLoggedIn">
+                    <li class="" id="team-stats" *ngIf = "isAdmin == 'true'">
                       <a class=" nav-link " routerLink=""><i class="fas fa-chart-line"></i><span>Team Stats</span></a>
                     </li>
                 </ul>
