--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -9,6 +9,42 @@
     z-index: 105;
 }
 
+.custom-dropdown{
+    position: absolute;
+    display: inline-block;
+    top:53px;
+    left: 290px;
+    z-index: 1200;
+}
+
+
+.custom-dropdown-content{
+    background-color: white;
+    display: none;
+    position: absolute;
+    overflow: auto;
+    z-index: 2;
+    min-width: 150px;
+    box-shadow: 1px 10px 20px 0px rgba(0,0, 0, 0.3) ;
+}
+.custom-dropdown-content img {
+    float: left;
+    width: 25px;
+    height: 25px;
+}
+.custom-dropdown-content a{
+    color: black;
+    text-decoration: none;
+    padding: 12px;
+    display: block;
+    font-size: 8px;
+
+}
+.show {display: block;}
+.custom-dropdown-content a:hover{
+   background-color: rgba(7, 31, 247, 0.4);
+}
+
 #nav-profile{
     width: 50px;
     height: 50px;
@@ -178,7 +214,7 @@
 
     #nav-menu{
         position: fixed;
-        top: 80px;
+        top: 75px;
     }
 
     #nav-profile{
