--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -175,6 +175,9 @@
         position: fixed;
         top: 100px;
     }
+    .custom-dropdown{
+        left:120px;
+    }
 }
 
 @media only screen and (min-width:360px) and (max-width: 375px){
@@ -222,6 +225,9 @@
         margin-left: -20px;
         width: 50px;
         height: 50px;
+    }
+    .custom-dropdown{
+        left:120px;
     }
 
     // .right{
