--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -71,12 +71,6 @@ select{
 
 
 
-@media only screen and (max-width: 770px){
-    #login.container{
-        width: 85% !important;
-    }
-}
-
 @media only screen and (max-width: @small){
 
     .compress{
@@ -86,11 +80,14 @@ select{
         width: auto;
         margin: @margin auto;
         position: relative;
-        left: 15px;
+        left: 25%;
     }
 
 }
 @media only screen and (min-width:@small) and (max-width: @phone){
+    #login.container{
+        width: 85% !important;
+    }
     
     .compress{
         width: auto;
@@ -100,7 +97,7 @@ select{
         width: auto;
         margin: @margin auto;
         position: relative;
-        left: 43px;
+        left: 25%;
     }
    
 
