--- a/src/app/shared-talks/shared-talks.component.less
+++ b/src/app/shared-talks/shared-talks.component.less
@@ -1,8 +1,16 @@
+@margin: 10px;
+@phone: 576px;
+@tablet: 768px;
+@laptop: 1200px;
+@small: 350px;
 
 #files{
     margin: 20px;
 }
 
+.progress{
+    margin-top: 20px;
+}
 
 .progress > .progress-bar::-webkit-progress-value{
         transition: width 0.1s ease;
@@ -10,7 +18,6 @@
 
 div#search{
     margin-top: 20px;
-    margin-bottom: -30px;
 }
 
 .container{
@@ -27,6 +34,28 @@ i#icon-search{
     
 }
 
+@media only screen and (max-width: @small){
+
+    .custom-file{
+        margin-top: 10px;
+        margin-left: 15px;
+    }
+    button#upload{
+        margin-top: 10px;
+    }
+
+}
+@media only screen and (min-width:@small) and (max-width: @phone){
+    
+   .custom-file{
+        margin-top: 10px;
+        margin-left: 15px;
+   }
+   button#upload{
+        margin-top: 10px;
+   }
+
+}
 
 
 
